# Life-of-game

./: CMakeLists.txt  ReadMe.md  interface.c  interface.h  main.c  model.c  model.h  unit_tests.c  view.c  view.h
